Scan issue table: added a collapsable description that appears when clicking on the issue name

--- a/app/assets/stylesheets/scans.css.scss
+++ b/app/assets/stylesheets/scans.css.scss
@@ -86,6 +86,18 @@
         //    word-wrap: break-word;
         //}
 
+        table tr.description, table td.description {
+            padding: 0px;
+            margin: 0px;
+            border: none;
+
+            blockquote {
+                margin: 0px;
+                margin-left: 20px;
+                margin-bottom: 10px;
+            }
+        }
+
         .td-url {
             word-wrap: break-word;
         }
